# pgmanagement

./: .gitignore  DEPLOY.md  GEMINI_IMPLEMENTATION_ROADMAP.md  render.yaml
backend/: .env.example  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_create_set_updated_at_trigger.py  b2c3d4e5f6g7_create_users_table.py  c3d4e5f6g7h8_create_refresh_tokens.py  d4e5f6g7h8i9_create_properties.py  e5f6g7h8i9j0_create_property_members.py  f6g7h8i9j0k1_create_rooms.py  g7h8i9j0k1l2_create_guests.py  h8i9j0k1l2m3_create_payments.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  guest.py  payment.py  property.py  room.py  (+3 more)
backend/docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_db_triggers.py  test_guest_repository.py  test_guest_service.py  test_guests_api.py  test_guests_db.py  test_isolation.py  test_main.py  test_occupancy_api.py  test_payment_repository.py  test_payment_service.py  test_payments_api.py  test_payments_db.py  test_properties_api.py  test_properties_db.py  test_properties_members_api.py  test_property_members_db.py  test_property_repository.py  test_property_service.py  test_refresh_tokens_db.py  test_role_deps.py  test_room_repository.py  test_room_service.py  test_rooms_api.py  test_rooms_db.py  test_security.py  test_stats_api.py  test_stats_service.py  test_user_repository.py  test_users_db.py
(+64 files in other folders)
