[project]
name = "pg-manager-backend"
version = "0.1.0"
description = "FastAPI backend for PG Management SaaS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.33",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "uuid6>=2024.7.10",
    "uvicorn>=0.30.1",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
